# fimfic-data

./: .gitignore  CHANGELOG.md  README.md  environment.yml  fimfic.py  setup.py  sql_patterns.py
.github/workflows/: python-package-test-conda.yml
classes/: story.py  storylist.py
fimficdata/common/: author.py  sql_patterns.py  story.py  storylist.py  tag.py  util.py
fimficdata/requestors/: webresource.py
fimficdata/schedulers/: schedule.py
fimficdata/scrape/: scrape.py
fimficstats/: fimfic-stats.ts  package.json  sql-patterns.ts  types-and-schema.ts
fimficstats-rs/: Cargo.toml  LICENSE
fimficstats-rs/src/: main.rs  structs.rs
tests/: next_nth_minute_test.py  parse_number_test.py  schedule_test.py  webresource_test.py
util/: util.py
