[package]
name = "fimfic-stats"
version = "0.1.0"
description = "CLI tools for scraping statistics from FIMFiction."
repository = "https://github.com/PseudoBob-Delightus/fimfic-data"
authors = ["Silk Rose", "Meadowsys"]
edition = "2021"
license = "MIT"
publish = false

[dependencies]
lazy_static = { version = "1.4.0" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }

[profile.dev]
opt-level = 0
debug-assertions = true
debug = true
incremental = true

[profile.release]
strip = true
opt-level = 3
debug-assertions = false
lto = true
codegen-units = 1
